# seniverse_cJSON_examples

./: CMakeLists.txt  test.c
seniverse_weather_parse/: seniverse_cJson_utils.c  seniverse_cJson_utils.h  seniverse_weather.c  seniverse_weather.h  seniverse_weather_daily.c  seniverse_weather_daily.h  seniverse_weather_def.h  seniverse_weather_hourly.c  seniverse_weather_hourly.h  seniverse_weather_location.c  seniverse_weather_location.h  seniverse_weather_now.c  seniverse_weather_now.h
seniverse_weather_parse/include/: seniverse_cJson_utils.h
seniverse_weather_test/: example_weather_now.c  example_weather_now.h  seniverse_weather_def.h  test_weather_daily.c  test_weather_daily.h  test_weather_hourly.c  test_weather_hourly.h  test_weather_location.c  test_weather_now.c
seniverse_weather_test/include/: test_weather_location.h  test_weather_now.h
seniverse_weather_test/src/: test_weather_daily.c  test_weather_hourly.c  test_weather_now.c
